VM-全家桶/victoriametrics/vmagent/vmagent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmagent
  namespace: tensuns
  labels:
    app: vmagent
spec:
  selector:
    matchLabels:
      app: vmagent
  template:
    metadata:
      labels:
        app: vmagent
    spec:
      serviceAccountName: vmagent
      containers:
        - name: vmagent
          #image: "victoriametrics/vmagent:latest"
          image: "*-registry-vpc.cn-shanghai.cr.aliyuncs.com/tools/victoriametrics/vmagent:v1.116.0"
          imagePullPolicy: IfNotPresent
          # promscrape.config: 指定 Prometheus 格式的抓取配置文件路径
          # promscrape.maxScrapeSize: 设置单个抓取请求的最大数据体积上限为 500MB。
          # remoteWrite.disableOnDiskQueu: 禁用磁盘队列缓存
          # remoteWrite.url=http://victoria-metrics.tensuns:8428/api/v1/write: 远程写入
          args:
            - -promscrape.config=/config/scrape.yml
            - -remoteWrite.url=http://victoria-metrics.tensuns:8428/api/v1/write
            - -promscrape.maxScrapeSize=500MB
            - -remoteWrite.disableOnDiskQueue
            - -loggerTimezone=Asia/Shanghai
            #- -remoteWrite.dropSamplesOnOverload
          ports:
            - name: http
              containerPort: 8429
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            limits:
              cpu: '2'
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          configMap:
            name: vmagent-config

---
apiVersion: v1
kind: Service
metadata:
  name: vmagent
  namespace: tensuns
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8429"
spec:
  selector:
    app: vmagent
  ports:
    - name: http
      port: 8429
      targetPort: http
  #type: NodePort
  type: ClusterIP
